--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "server": "node node_modules/ngf-server/server.js",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -22,12 +23,13 @@
     "@angular/router": "7.1.2",
     "core-js": "2.5.4",
     "ngf-bootstrap": "0.0.5",
+    "ngf-server": "^1.0.2",
     "rxjs": "6.3.3",
     "toastr": "^2.1.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.11.2",
+    "@angular-devkit/build-angular": "^0.900.7",
     "@angular/cli": "^7.1.2",
     "@angular/compiler-cli": "7.1.2",
     "@angular/language-service": "7.1.2",
@@ -39,7 +41,7 @@
     "jasmine-spec-reporter": "4.2.1",
     "karma": "3.1.3",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "5.4.0",
